@startuml diag-classe
!theme materia

skinparam DefaultFontSize 40
skinparam TitleFontSize 55
skinparam CaptionFontSize 50
skinparam NoteFontSize 50
skinparam ActorFontSize 50
skinparam UsecaseFontSize 50

title **Diagramme de Classes**
caption Structure des tables PostgreSQL et de leurs relations

' --- Style ---
skinparam classAttributeIconSize 0
skinparam shadowing false
hide empty methods

' --- Enumération pour les rôles (reflète le CHECK constraint) ---
enum Role {
  admin
  candidat
  recruteur
}

' --- Entités Principales ---
class users {
  + id: SERIAL <<PK>>
  + nom: VARCHAR(100)
  + email: VARCHAR(100) <<UNIQUE>>
  + role: Role
  + doit_changer_mdp: BOOLEAN
}

class sessions {
  + id: SERIAL <<PK>>
  + poste_vise: VARCHAR(255)
  + statut: VARCHAR(20)
  + tentatives_realisees: INTEGER
  + events_timeline: JSONB
  + questions_ids: INTEGER[]
  -- Clés Étrangères --
  # user_id: INTEGER <<FK>>
  # recruteur_id: INTEGER <<FK>>
  # profil_ponderation_id: INTEGER <<FK>>
}

class questions {
  + id: SERIAL <<PK>>
  + intitule: TEXT
  + category: VARCHAR(100)
  + signalement_admin: BOOLEAN
  -- Clés Étrangères --
  # recruteur_id: INTEGER <<FK>>
}

' --- Entités de Configuration et de Support ---
class profils_ponderation {
  + id: SERIAL <<PK>>
  + nom_profil: VARCHAR(100) <<UNIQUE>>
  + description: TEXT
  + poids: JSONB
}

class configurations {
  + id: SERIAL <<PK>>
  + cle: VARCHAR(100) <<UNIQUE>>
  + valeur: TEXT
}

' --- Entités de Résultats (liées à la Session) ---
package "Tables de Résultats d'Analyse" {
  class reports <<Résumé Global>> {
    # session_id: INTEGER <<FK>> <<UNIQUE>>
    + note_globale: REAL
    + commentaire_rh: TEXT
    + validated: BOOLEAN
  }
  
  class answers <<Détail par Réponse>> {
    # session_id: INTEGER <<FK>>
    # question_id: INTEGER <<FK>>
    + transcription_reponse: TEXT
    + score_pertinence: REAL
    + score_grammaire: REAL
    + speech_rate: FLOAT
  }
  
  class audio_features <<Analyse Vocale>>
  class emotion_scores <<Analyse Émotionnelle>>
  class facial_features <<Analyse Visuelle>>
}

' --- DÉFINITION DES RELATIONS ---
' Relations impliquant 'users'
users "1" -- "0..*" sessions : "est le candidat"
users "1" -- "0..*" sessions : "est le recruteur"
users "1" -- "0..*" questions : "crée"

' Relations impliquant 'sessions'
sessions "1" -- "0..1" reports : "a"
sessions "1" -- "0..*" answers : "contient"
sessions "1" -- "0..1" audio_features
sessions "1" -- "0..1" emotion_scores
sessions "1" -- "0..1" facial_features

profils_ponderation "1" -- "0..*" sessions : "définit les poids pour"
questions "1" -- "0..*" answers : "est la question de"



@enduml